# rosbot

./: CMakeLists.txt  package.xml
config/: diff_drive_controllers.yaml  rosbot.rviz
description/: camera.xacro  lidar.xacro  rosbot.urdf.xacro  rosbot_control.xacro  rosbot_core.xacro
description/meshes/: bl_wheel_Link.STL  br_wheel_Link.STL  camera_Link.STL  fl_wheel_Link.STL  fr_wheel_Link.STL  lidar_Link.STL
launch/: rosbot_bridge.launch.py  rosbot_control.launch.py  rosbot_gazebo.launch.py  rosbot_sim.launch.py  rsp.launch.py
worlds/: empty.world
