<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot</name>
  <version>0.0.1</version>
  <description>Simulated ROS 2 robot with teleop, Gazebo Harmonic and RViz2 support</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
